Fri May 23 12:45:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/RB_Tree.cpp:

          Enhancement to stop external pointers to retained items being
          invalidated upon key deletion.

Fri May 23 12:14:54 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Monitor_Control/Auto_Update_Starter.h:
        
          Updated filename (which was recently changed) in a comment.
          Thanks to Simon Massey <simon.massey@prismtech.com> for
          reporting the fuzz warning.

Fri May 23 08:14:38 UTC 2008  Olli Savia  <ops@iki.fi>

        * tests/run_test.lst:

          Run Bug_2980_Regression_Test on LynxOS.

Fri May 23 00:18:24 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Makefile.am:

          Rename MonitorControl subdirectory to Monitor_Control, to
          adapt to this change:

          Wed May 21 19:01:10 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

Thu May 22 23:04:38 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Rename MonitorControl subdirectory to Monitor_Control, to
          adapt to this change:

          Wed May 21 19:01:10 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

Thu May 22 19:29:35 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Monitor_Base.h (clear):

          Made the method virtual, since it's overridden in the
          TAO Notification Service monitors and we are now using
          the ACE monitor registry which stores everyhing as the
          ACE base class monitor.

Thu May 22 14:56:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Added support for ACE_RUN_VX_EXE_SUBDIR which can be used when
          the vxworks executables are build in a subdirectory

Thu May 22 09:47:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-codeset.patch:
        * ace/Codeset_Registry_db.cpp: